methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:10: error: not found: value x
def isFacingTrail():Boolean = {if (estFaceMur()) {return false}; else {avance();var y=getCouleurSol();recule();if(x==y) {return true}; else {return false}}
                                                                                                                  ^