methods.slug.SlugSnail.scala.code
def hunt(c:Color) {avance();var x=getCouleurSol();recule();hunt()
     // Write your code here
 }

def hunt() {while (!estSurBiscuit()) {if (isFacingTrail()) {baisseBrosse();avance();leveBrosse()};
    // Write your code here
                                      else {gauche()}}; prendBiscuit()}

def isFacingTrail():Boolean = {if (estFaceMur()) {return false}; else {avance();var y=getCouleurSol();recule();if(x==y) {return true}; else {return false}}
    // Write your code here
}